src/test/ui/issues/issue-56762.stderr
error[E0080]: values of the type `[u8; 2305843009213693951]` are too big for the current architecture
  --> $DIR/issue-56762.rs:19:1
   |
LL | static MY_TOO_BIG_ARRAY_1: TooBigArray = TooBigArray::new();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0080]: values of the type `[u8; 2305843009213693951]` are too big for the current architecture
  --> $DIR/issue-56762.rs:21:1
   |
LL | static MY_TOO_BIG_ARRAY_2: [u8; HUGE_SIZE] = [0x00; HUGE_SIZE];
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
